0.1.5 xxxx-xx-xx
================

 * Implicit decoration of bare intervals triggers a warning now and can be
   allowed or forbidden by the user.  Implicit decoration of bare interval
   literals is not affected.

 * newdec: New operation for explicit promotion of bare intervals into
   decorated intervals (without warning).

Bugfixes
 * mtimes on decorated intervals supports broadcasting of scalar factors
 * An error in GNU Octave core, which could lead to lost or wrong interval
   decorations, no longer affects decorated intervals (bug #42735)
 * Some errors in the function documentation have been fixed (thanks to
   doctest-for-matlab and Colin's texinfo compatibility patches)

0.1.4 2015-03-15
================

 * New interval constructors: hull, midrad

 * New interval arithmetic functions: cbrt, cot, coth, csc, csch, dilog, ei, 
   erf, erfc, gamma, gammaln, psi, rsqrt, sec, sech
 
 * mtimes: Support for fast, less accurate evaluation using BLAS routines
 
 * mldivide, mrdivide, inv: Improved performance by using faster mtimes
 
 * infsup, infsupdec: Enabled broadcasting of scalar boundaries

 * rad: May compute mid and rad simultaneously
 
 * subsref: Access to interval properties using field syntax: x.inf and x.sup
 
0.1.3 2015-02-24
================

Fixed a compile error that could possibly occur during package installation

0.1.2 2015-02-22
================

 * New interval arithmetic functions: nthroot, hypot, log1p, expm1

 * lu: New operation for LU(P) decomposition of interval matrices
 
 * nai: New decorated interval constant

 * mldivide, mrdivide, inv: Greatly improved accuracy and performance of the
   linear solver
 
 * Improved accuracy of vector sums, dot products, pownrev, and powrev2

 * powrev1, powrev2, pownrev, mulrev: Now allow non-scalar arguments
 
 * overlap: Renamed one overlapping state from equal to equals
 
 * mulrevtopair: No longer available, use mulrev with two output parameters for
   two-output division
 